samples/_failures_safe/1761392548_35ff2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_820a80c1.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_820a80c1.c:170:34: error: expected ‘;’ at end of input
  170 |         case TOKEN_NUMBER: printf
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_820a80c1.c:170:9: error: expected declaration or statement at end of input
  170 |         case TOKEN_NUMBER: printf
      |         ^~~~
./samples/SAFE/__tmp_820a80c1.c:170:9: error: expected declaration or statement at end of input
